# PGITIC_sh

./: README.md
devel/: .rosinstall  setup.sh
devel/include/dynamixel_controllers/: RestartController.h  RestartControllerRequest.h  SetComplianceMargin.h  SetComplianceMarginResponse.h  SetCompliancePunchRequest.h  SetComplianceSlope.h  SetComplianceSlopeResponse.h  SetSpeed.h  SetSpeedResponse.h  StartController.h  StopControllerResponse.h  TorqueEnable.h  TorqueEnableRequest.h
devel/include/dynamixel_msgs/: MotorStateList.h
devel/include/upperbodycore_msgs/: FaceDetectionSrv.h  FaceDetectionSrvRequest.h  FaceDetectionSrvResponse.h  FaceTrackingSrv.h  FaceTrackingSrvRequest.h  FaceTrackingSrvResponse.h  GestureDetect.h  Skeleton.h  arm.h  avoidThatAction.h  avoidThatActionFeedback.h  avoidThatActionGoal.h  avoidThatActionResult.h  avoidThatFeedback.h  avoidThatGoal.h  avoidThatResult.h  avoidthatactionAction.h  avoidthatactionActionFeedback.h  avoidthatactionActionGoal.h  avoidthatactionActionResult.h  avoidthatactionFeedback.h  avoidthatactionGoal.h  avoidthatactionResult.h  close_skeletonRequest.h  close_skeletonResponse.h  commandRequest.h  commandResponse.h  coordinate.h  face_headtrackerSrvRequest.h  face_headtrackerSrvResponse.h  facepos.h  faceposition.h  follow.h  followRequest.h  followResponse.h  gripAction.h  gripActionFeedback.h  gripActionGoal.h  gripActionResult.h  gripFeedback.h  (+109 more)
devel/lib/pgitic_ramp_detection/: ramp_detection  region_growing_segmentation
devel/lib/pgitic_record_motors/: record_motor  record_motor_core  sample_recordmotor
devel/lib/pgitic_senario/: senario
devel/lib/pgitic_skeleton/: core_skeleton  sampleUsingSkeleton
devel/lib/pgitic_wave/: wave_detect_core
devel/lib/pkgconfig/: dynamixel_controllers.pc  dynamixel_driver.pc  dynamixel_msgs.pc  dynamixel_tutorials.pc  openni_tracker.pc  pgitic_play_sound.pc  pgitic_ramp_detection.pc  pgitic_record_motors.pc  pgitic_senario.pc  pgitic_skeleton.pc  pgitic_wave.pc  skeleton_markers.pc  upperbodycore.pc  upperbodycore_msgs.pc  upperbodygui.pc
devel/lib/skeleton_markers/: skeleton_tracker
devel/lib/upperbodycore/: sample  upperbodycore
qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
qtcreator-build/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
qtcreator-build/devel/: .catkin  .rosinstall  setup.sh
qtcreator-build/dynamixel/dynamixel_controllers/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dynamixel_controllers.cbp
qtcreator-build/dynamixel/dynamixel_driver/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dynamixel_driver.cbp
qtcreator-build/dynamixel/dynamixel_motor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dynamixel_motor.cbp
qtcreator-build/dynamixel/dynamixel_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dynamixel_msgs.cbp
qtcreator-build/dynamixel/dynamixel_tutorials/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dynamixel_tutorials.cbp
qtcreator-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
qtcreator-build/openni_tracker/: CTestTestfile.cmake  Makefile  cmake_install.cmake  openni_tracker.cbp
qtcreator-build/pgitic_play_sound/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pgitic_play_sound.cbp
qtcreator-build/pgitic_play_sound/catkin_generated/: package.cmake  (+2 more)
qtcreator-build/pgitic_ramp_detection/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pgitic_ramp_detection.cbp
qtcreator-build/pgitic_record_motors/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pgitic_record_motors.cbp
qtcreator-build/pgitic_senario/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pgitic_senario.cbp
qtcreator-build/pgitic_skeleton/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pgitic_skeleton.cbp
qtcreator-build/pgitic_wave_detect/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pgitic_wave.cbp
qtcreator-build/skeleton_markers/: CTestTestfile.cmake  Makefile  cmake_install.cmake  skeleton_markers.cbp
qtcreator-build/upperbodycore/: CTestTestfile.cmake  Makefile  cmake_install.cmake  upperbodycore.cbp
qtcreator-build/upperbodycore_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  upperbodycore_msgs.cbp
qtcreator-build/upperbodygui/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ui_camera_calib_view.h  upperbodygui.cbp
shell/: alldevices.sh  kinect.sh
src/openni_tracker/: CMakeLists.txt  CMakeLists.txt~
src/pgitic_play_sound/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/pgitic_ramp_detection/: CMakeLists.txt  CMakeLists.txt~
src/pgitic_ramp_detection/src/: ramp_detection.cpp  ramp_detection_1.cpp  region_growing_segmentation.cpp  spline.hpp
src/pgitic_record_motors/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/pgitic_record_motors/src/: RecordAndPlay_motors.cpp  RecordAndPlay_motors.h  record_motor.cpp  record_motor_core.cpp  sample_recordmotor.cpp
src/pgitic_record_motors/src/files/: test1.txt  test10.txt  test11.txt  test12.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
src/pgitic_senario/: CMakeLists.txt  CMakeLists.txt~
src/pgitic_senario/src/: senario.cpp  soundclient.h
src/pgitic_skeleton/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/pgitic_wave_detect/: CMakeLists.txt  CMakeLists.txt~
src/upperbodycore/: CMakeLists.txt
src/upperbodycore/shell/: alldevices.sh  alldevices.sh~
src/upperbodycore/src/: sample.cpp  upperbodyclient.cpp  upperbodyclient.h  upperbodycore.cpp  upperbodycorefunctions.h
src/upperbodycore_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/upperbodygui/: CMakeLists.txt  CMakeLists.txt~  package.xml~  plugin.xml~
src/upperbodygui/include/upperbodygui/: CameraCalibView.h  ratio_layouted_frame.h
src/upperbodygui/resources/: camera_calib_view.ui
src/upperbodygui/scripts/: upperbodygui
src/upperbodygui/src/upperbodygui/: CameraCalibView.cpp  ratio_layouted_frame.cpp
(+785 files in other folders)
